<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerActivity">

    <Button
        android:id="@+id/displayButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="39dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:text="@string/display_customers"
        app:layout_constraintBottom_toTopOf="@+id/newCustomerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/newCustomerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="241dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:text="@string/new_customer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sessionManagerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/session_manager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newCustomerButton" />

    <Button
        android:id="@+id/paymentButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="85dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="84dp"
        android:text="@string/payment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sessionManagerButton" />

</android.support.constraint.ConstraintLayout>

